fixed service ticket delete
